--- a/design.css
+++ b/design.css
@@ -3,9 +3,66 @@
 body {
   margin: 0;
 }
+.aboutblank {
+  opacity: 1;
+}
 .p1st_block_one {
   padding: 10px;
-  background-color: #6f8768;
+  background-color: #555D50;
+}
+.welcome_1 {
+  background-color: #50262E;
+  opacity: 1;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.wlc0 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 40px;
+  color: #fff;
+  text-align: left;
+  font-weight: 600;
+  margin-left: 10%;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  opacity: 0.8;
+}
+.wlc1 {
+  font-family: 'Raleway';
+  font-size: 17px;
+  color: #fff;
+  opacity: 0.8;
+  text-align: left;
+  font-weight: 400;
+  margin-left: 10%;
+}
+.wlc2 {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-size: 17px;
+  color: #fff;
+  opacity: 0.8;
+  text-align: left;
+  font-weight: 300;
+  margin-left: 10%;
+}
+.wlcTable_numbs {
+  font-family: 'Roboto', sans-serif;
+  font-size: 70px;
+  color: #fff;
+  opacity: 0.6;
+  text-align: left;
+  font-weight: 400;
+  margin-left: 10%;
+}
+.wlcTable_txt {
+  font-family: 'Raleway', sans-serif;
+  font-size: 13px;
+  color: #fff;
+  opacity: 0.6;
+  text-align: left;
+  font-weight: 300;
+  margin-left: 10%;
 }
 .FrstPageCompanyNaming {
   font-family: 'Raleway', sans-serif;
@@ -26,6 +83,12 @@ body {
 .p2nd_block_grey {
   padding-top: 10px;
   background-color: #212121;
+
+  padding-bottom: 10px;
+}
+.p2nd_block_blue {
+  padding-top: 10px;
+  background-color: #76A4CE;
 
   padding-bottom: 10px;
 }
@@ -141,7 +204,7 @@ body {
   opacity: 0.8;
 }
 .asylum {
-  background-color: #6f8768;
+  background-color: #555D50;
   text-align: center;
   padding-bottom: 20px;
 }
@@ -157,6 +220,6 @@ body {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  padding: 20px 20px;
-  opacity: 0.5;
+  padding: 30px 30px;
+  opacity: 0.6;
 }
